--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "7.6.1",
-    "@mantine/hooks": "7.6.1",
+    "@mantine/core": "^7.6.1",
+    "@mantine/form": "^7.6.2",
+    "@mantine/hooks": "^7.6.2",
+    "@mantine/notifications": "^7.6.2",
+    "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.1.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.11.26",
-    "@types/react": "18.2.65",
+    "@types/react": "^18.2.65",
     "@types/react-dom": "18.2.21",
+    "@types/uuid": "^9.0.8",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.35",
