--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/form": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
     "@mantine/notifications": "^7.6.2",
+    "@tabler/icons-react": "^3.0.3",
     "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.1.3",
     "react": "18.2.0",
