--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@mantine/form": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
     "@mantine/notifications": "^7.6.2",
+    "@prisma/client": "^5.11.0",
     "@tabler/icons-react": "^3.0.3",
+    "bcrypt": "^5.1.1",
     "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.1.3",
     "react": "18.2.0",
@@ -22,6 +24,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "20.11.26",
     "@types/react": "^18.2.65",
     "@types/react-dom": "18.2.21",
@@ -31,6 +34,7 @@
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "1.13.0",
     "postcss-simple-vars": "^7.0.1",
+    "prisma": "^5.11.0",
     "typescript": "5.4.2"
   },
   "packageManager": "yarn@4.1.1"
