--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@mantine/form": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
     "@mantine/notifications": "^7.6.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
     "@tabler/icons-react": "^3.0.3",
     "bcrypt": "^5.1.1",
     "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuid": "^9.0.1",
