--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
     "@tabler/icons-react": "^3.0.3",
+    "@tanstack/react-query": "^5.28.4",
     "bcrypt": "^5.1.1",
     "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.1.3",
@@ -26,6 +27,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.27.7",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.11.26",
     "@types/react": "^18.2.65",
