--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.11.0",
     "@tabler/icons-react": "^3.0.3",
     "@tanstack/react-query": "^5.28.4",
+    "@tanstack/react-query-devtools": "^5.28.4",
     "bcrypt": "^5.1.1",
     "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.1.3",
